--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <img src="https://via.placeholder.com/150x50?text=Anax+Logo" alt="Anax Logo" id="logo" />
     <h2>Anax Attendance Form</h2>
 
-    <form id="attendanceForm" method="POST" action="https://script.google.com/macros/s/AKfycbwUY_6y9rttyur6cox5HvZWHGbSlZr4RQW8Pxt-6Mpyw5yfchfocKihgSKlDHXlY3dljw/exec">
+    <form id="attendanceForm" method="POST" action="https://anaxx.app.n8n.cloud/webhook-test/attendence">
       <label for="shift">Shift</label>
       <select id="shift" name="shift" required>
         <option value="">Select Shift</option>
